--- a/requirements.txt
+++ b/requirements.txt
@@ -35,9 +35,9 @@ seaborn==0.13.2
 six==1.16.0
 sympy==1.12
 threadpoolctl==3.5.0
-torch==2.4.1+cu124
-torchaudio==2.4.1+cu124
-torchvision==0.19.1+cu124
+# torch==2.4.1+cu124
+# torchaudio==2.4.1+cu124
+# torchvision==0.19.1+cu124
 tqdm==4.66.5
 triton==3.0.0
 typing_extensions==4.9.0
